--- a/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
+++ b/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
@@ -6,8 +6,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.35" />
-		<PackageReference Include="Syrx" Version="2.1.0" />
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Syrx" Version="2.*" />
+		<PackageReference Include="Syrx.Validation" Version="2.*" />
 	</ItemGroup>
 
 	<ItemGroup>
