--- a/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
-		<PackageReference Include="Syrx.Connectors" Version="2.1.0" />
+		<PackageReference Include="Syrx.Validation" Version="2.*" />
+		<PackageReference Include="Syrx.Connectors" Version="2.*" />
 	</ItemGroup>
 
 	<ItemGroup>
