--- a/src/Syrx.Commanders.Databases.Builders/Syrx.Commanders.Databases.Builders.csproj
+++ b/src/Syrx.Commanders.Databases.Builders/Syrx.Commanders.Databases.Builders.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Validation" Version="2.*" />
+		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
 	</ItemGroup>
 
 </Project>
