--- a/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
@@ -7,7 +7,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-		<PackageReference Include="Syrx.Extensions" Version="2.*" />
+		<PackageReference Include="Syrx.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
