--- a/src/Syrx.Commanders.Databases.Settings.Extensions.Xml/Syrx.Commanders.Databases.Settings.Extensions.Xml.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Extensions.Xml/Syrx.Commanders.Databases.Settings.Extensions.Xml.csproj
@@ -7,8 +7,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-		<PackageReference Include="Syrx.Extensions" Version="2.*" />
-		<PackageReference Include="Syrx.Validation" Version="2.*" />
+		<PackageReference Include="Syrx.Extensions" Version="2.2.0" />
+		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
 	</ItemGroup>
 
 </Project>
