--- a/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
@@ -7,10 +7,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-		<PackageReference Include="Syrx.Extensions" Version="2.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Connectors\Syrx.Commanders.Databases.Connectors.csproj" />
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Extensions\Syrx.Commanders.Databases.Extensions.csproj" />
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings.Extensions\Syrx.Commanders.Databases.Settings.Extensions.csproj" />
