--- a/src/Syrx.Commanders.Databases.Settings.Extensions.Json/Syrx.Commanders.Databases.Settings.Extensions.Json.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Extensions.Json/Syrx.Commanders.Databases.Settings.Extensions.Json.csproj
@@ -7,9 +7,12 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-		<PackageReference Include="Syrx.Extensions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />	
 		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
 	</ItemGroup>
 
 </Project>
