--- a/src/Syrx.Commanders.Databases.Settings.Readers/Syrx.Commanders.Databases.Settings.Readers.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Readers/Syrx.Commanders.Databases.Settings.Readers.csproj
@@ -5,10 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Readers" Version="2.2.0" />
-	</ItemGroup>
-
-	<ItemGroup>
+	  <ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Readers\Syrx.Readers.csproj" />
 	  <ProjectReference Include="..\Syrx.Commanders.Databases.Settings\Syrx.Commanders.Databases.Settings.csproj" />
 	</ItemGroup>
 
