--- a/src/Syrx.Commanders.Databases.Settings/Syrx.Commanders.Databases.Settings.csproj
+++ b/src/Syrx.Commanders.Databases.Settings/Syrx.Commanders.Databases.Settings.csproj
@@ -2,14 +2,21 @@
 	<PropertyGroup>
 		<Description>This package hosts the types used by the Syrx configuration subsystem. </Description>
 		<PackageTags>syrx;data access;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
-	
+
 	<ItemGroup>
 		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
-	  <ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Settings\Syrx.Settings.csproj" />
+		<ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Settings\Syrx.Settings.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
