--- a/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors.Extensions/Syrx.Commanders.Databases.Connectors.Extensions.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Description>This package hosts extension methods to simplify dependency injection using the IServiceCollection. </Description>
-		<PackageReleaseNotes></PackageReleaseNotes>
 		<PackageTags>syrx;data access;dapper;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,4 +16,10 @@
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings.Extensions\Syrx.Commanders.Databases.Settings.Extensions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
