--- a/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
@@ -5,6 +5,7 @@
 			This package also includes a base DatabaseConnector which can be used with any RDBMS that supports creating an IDbConnection through a DbProviderFactory instance.
 		</Description>
 		<PackageTags>syrx;data access;dapper;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,4 +17,10 @@
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings\Syrx.Commanders.Databases.Settings.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
