--- a/src/Syrx.Commanders.Databases.Settings.Extensions.Json/Syrx.Commanders.Databases.Settings.Extensions.Json.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Extensions.Json/Syrx.Commanders.Databases.Settings.Extensions.Json.csproj
@@ -2,17 +2,23 @@
 	<PropertyGroup>
 		<Description>This package adds support for configuration of Syrx database commands via JSON file. </Description>
 		<PackageTags>syrx;data access;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />	
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
 		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
+		<ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
