--- a/src/Syrx.Commanders.Databases.Settings.Extensions/Syrx.Commanders.Databases.Settings.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Extensions/Syrx.Commanders.Databases.Settings.Extensions.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<Description>This package hosts extension methods to simplify the configuration of Syrx database commands. </Description>
 		<PackageTags>syrx;data access;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -13,4 +14,10 @@
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings\Syrx.Commanders.Databases.Settings.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
