--- a/src/Syrx.Commanders.Databases.Settings.Readers.Extensions/Syrx.Commanders.Databases.Settings.Readers.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Readers.Extensions/Syrx.Commanders.Databases.Settings.Readers.Extensions.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<Description>This package hosts extension methods to simplify dependency injection using the IServiceCollection. </Description>
 		<PackageTags>syrx;data access;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,8 +10,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
-	  <ProjectReference Include="..\Syrx.Commanders.Databases.Settings.Readers\Syrx.Commanders.Databases.Settings.Readers.csproj" />
+		<ProjectReference Include="..\..\.submodules\Syrx\src\Syrx.Extensions\Syrx.Extensions.csproj" />
+		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings.Readers\Syrx.Commanders.Databases.Settings.Readers.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
