--- a/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
+++ b/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
@@ -2,7 +2,9 @@
 	<PropertyGroup>
 		<Description>This package hosts the implementation of the Syrx Database Commander which is a wrapper over Dapper's Query and Execute methods. </Description>
 		<PackageTags>syrx;data access;dapper;orm;micro-orm</PackageTags>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
+	
 
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.35" />
@@ -14,5 +16,13 @@
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Connectors\Syrx.Commanders.Databases.Connectors.csproj" />
 		<ProjectReference Include="..\Syrx.Commanders.Databases.Settings.Readers\Syrx.Commanders.Databases.Settings.Readers.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+	
 
 </Project>
