updated packages to 3.0.0

--- a/tests/integration/Syrx.Commanders.Databases.Tests.Integration.Models/Syrx.Commanders.Databases.Tests.Integration.Models.csproj
+++ b/tests/integration/Syrx.Commanders.Databases.Tests.Integration.Models/Syrx.Commanders.Databases.Tests.Integration.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
+
 </Project>
