--- a/src/Syrx.Commanders.Databases.Builders/Syrx.Commanders.Databases.Builders.csproj
+++ b/src/Syrx.Commanders.Databases.Builders/Syrx.Commanders.Databases.Builders.csproj
@@ -7,7 +7,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Syrx.Validation" Version="3.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 
 </Project>
