--- a/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
+++ b/src/Syrx.Commanders.Databases.Connectors/Syrx.Commanders.Databases.Connectors.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Syrx.Validation" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,5 +22,9 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 </Project>
