--- a/src/Syrx.Commanders.Databases.Extensions/Syrx.Commanders.Databases.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Extensions/Syrx.Commanders.Databases.Extensions.csproj
@@ -18,4 +18,8 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+	</ItemGroup>
 </Project>
