--- a/src/Syrx.Commanders.Databases.Settings.Extensions.Xml/Syrx.Commanders.Databases.Settings.Extensions.Xml.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Extensions.Xml/Syrx.Commanders.Databases.Settings.Extensions.Xml.csproj
@@ -6,8 +6,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.9" />
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.10" />
+		<PackageReference Include="Syrx.Validation" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -19,5 +19,9 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 </Project>
