--- a/src/Syrx.Commanders.Databases.Settings.Readers.Extensions/Syrx.Commanders.Databases.Settings.Readers.Extensions.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Readers.Extensions/Syrx.Commanders.Databases.Settings.Readers.Extensions.csproj
@@ -16,4 +16,8 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+	</ItemGroup>
 </Project>
