--- a/src/Syrx.Commanders.Databases.Settings.Readers/Syrx.Commanders.Databases.Settings.Readers.csproj
+++ b/src/Syrx.Commanders.Databases.Settings.Readers/Syrx.Commanders.Databases.Settings.Readers.csproj
@@ -17,4 +17,9 @@
 			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
+
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+	</ItemGroup>
 </Project>
