--- a/src/Syrx.Commanders.Databases.Settings/Syrx.Commanders.Databases.Settings.csproj
+++ b/src/Syrx.Commanders.Databases.Settings/Syrx.Commanders.Databases.Settings.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Syrx.Validation" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -18,5 +18,9 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 </Project>
