--- a/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
+++ b/src/Syrx.Commanders.Databases/Syrx.Commanders.Databases.csproj
@@ -8,7 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.1.66" />
-		<PackageReference Include="Syrx.Validation" Version="2.0.0" />
+		<PackageReference Include="Syrx.Validation" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,6 +22,10 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 	
 
