--- a/tests/unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit.csproj
+++ b/tests/unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit/Syrx.Commanders.Databases.Settings.Extensions.Xml.Tests.Unit.csproj
@@ -14,10 +14,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.9" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.9" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.10" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
@@ -42,6 +42,10 @@
 		<None Update="syrx.settings.xml">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
 	</ItemGroup>
 
 </Project>
