--- a/tests/unit/Syrx.Commanders.Databases.Settings.Tests.Unit/Syrx.Commanders.Databases.Settings.Tests.Unit.csproj
+++ b/tests/unit/Syrx.Commanders.Databases.Settings.Tests.Unit/Syrx.Commanders.Databases.Settings.Tests.Unit.csproj
@@ -31,4 +31,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
+
 </Project>
