--- a/tests/unit/Syrx.Commanders.Databases.Tests.Unit/Syrx.Commanders.Databases.Tests.Unit.csproj
+++ b/tests/unit/Syrx.Commanders.Databases.Tests.Unit/Syrx.Commanders.Databases.Tests.Unit.csproj
@@ -33,4 +33,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
+
 </Project>
